Further change Map creation.